--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ echo "decoded.json" >> .gitignore
 echo "serviceAccountKey.json" >> .gitignore
 git add .gitignore
 git commit -m "Ignore secret files"
+# Ignore secrets
+project/serviceAccountKey.json
+decoded.json
